Closed Bug 1481500 Opened 6 years ago Closed 6 years ago

mouseleave shouldn't be fired but is fired on a shadow element when the mouse is moving from the shadow element to its included slotted element

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: zjz, Assigned: emilio)

References

Details

Attachments

(2 files)

Attached file testcase.html
Please see the testcase.html mouseleave shouldn't be fired but is fired on a shadow element, when the mouse is moving from the shadow element to its included slotted element. Chrome 70 works correctly in the test.
Thanks for the report. I can try to take a look at this, I agree it's unexpected for the mouseleave event to be fired in this case.
Assignee: nobody → emilio
We shouldn't fire mouseenter / leave based on the light tree, but the flattened tree, the same way as the rest of the hover code works.
Attachment #8998241 - Flags: review?(bugs)
See Also: → 1481514
Comment on attachment 8998241 [details] Teach EnterLeaveDispatcher about the flattened tree. Olli Pettay [:smaug] has approved the revision. https://phabricator.services.mozilla.com/D2866
Attachment #8998241 - Flags: review+
Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/mozilla-inbound/rev/da8de7578878 Teach EnterLeaveDispatcher about the flattened tree. r=smaug
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: