Bug 1481500: Teach EnterLeaveDispatcher about the flattened tree. r=smaug

We shouldn't fire mouseenter / leave based on the light tree, but the
flattened tree, the same way as the rest of the hover code works.

Differential Revision: https://phabricator.services.mozilla.com/D2866